# brave-core

./: .gitignore  DEPS  Jenkinsfile  PRESUBMIT.py  chromium_presubmit_config.json5  package-lock.json  package.json
.storybook/: BUILD.gn  webpack.config.js
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: apk_for_test.flags
app/: brave_command_ids.h  brave_generated_resources.grd  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp  generated_resources.grd  profiles_strings.grdp
browser/: about_flags.cc  brave_browser_main_extra_parts.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  sources.gni
browser/ai_chat/: BUILD.gn  ai_chat_policy_browsertest.cc
browser/brave_ads/: sources.gni
browser/brave_ads/application_state/background_helper/: BUILD.gn
browser/brave_stats/: brave_stats_updater.cc
browser/brave_vpn/: brave_vpn_service_factory.cc
browser/brave_wallet/: brave_wallet_context_utils.cc  brave_wallet_service_unittest.cc
browser/browsing_data/: brave_browsing_data_remover_delegate.cc
browser/debounce/: debounce_browsertest.cc
browser/net/: brave_request_handler.cc
browser/search_engines/: search_engine_provider_service_browsertest.cc
browser/ui/: BUILD.gn  browser_commands.cc
components/: autofill_strings.grdp  compose_strings.grdp  privacy_sandbox_strings.grdp  search_engine_choice_strings.grdp
components/brave_wallet_ui/: BUILD.gn
components/constants/: webui_url_constants.cc  webui_url_constants.h
components/futures/: future.h  (+2 more)
components/webui_resources/: BUILD.gn  webui_resources.cc  webui_resources.h
ios/: BUILD.gn
ios/browser/: BUILD.gn
ios/browser/api/: BUILD.gn
ios/browser/api/ai_chat/: ai_chat.mm
ios/browser/api/credential_provider/: credential_provider_api.h  credential_provider_api.mm
ios/browser/api/features/: BUILD.gn  DEPS  features.mm
ios/browser/api/ui/webui/: BUILD.gn  blockchain_images_source.mm  brave_wallet_ui.h  brave_wallet_ui.mm  wallet_common_ui.mm  wallet_handler.h  wallet_handler.mm  wallet_page_handler.h  wallet_page_handler.mm
ios/browser/api/web/ui/: chrome_webview.h  chrome_webview.mm
ios/browser/application_context/: brave_application_context_impl.h  brave_application_context_impl.mm
ios/browser/brave_wallet/: BUILD.gn  brave_wallet_factory_wrappers.h  swap_service_factory.h
ios/browser/browser_state/: brave_browser_state_keyed_service_factories.mm
ios/browser/ui/webui/: BUILD.gn  brave_adblock_internals_ui.h  brave_adblock_internals_ui.mm  brave_web_ui_controller_factory.mm  brave_webui_source.h  brave_webui_source.mm
patches/: base-BUILD.gn.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  build-config-chrome_build.gni.patch  build-config-compiler-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-notifications-NotificationPlatformBridge.java.patch  chrome-android-java-src-org-chromium-chrome-browser-tabbed_mode-TabbedRootUiCoordinator.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-app_controller_mac.mm.patch  chrome-browser-net-system_network_context_manager.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-privacy_page-personalization_options.ts.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-resources-settings-settings.ts.patch  chrome-browser-resources-side_panel-bookmarks-power_bookmarks_list.ts.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-browser_command_controller.cc.patch  chrome-browser-ui-browser_navigator.cc.patch  chrome-browser-ui-tab_helpers.cc.patch  chrome-browser-ui-views-bookmarks-bookmark_bar_view.cc.patch  chrome-browser-ui-views-frame-browser_view.cc.patch  chrome-browser-ui-views-location_bar-location_bar_view.cc.patch  chrome-browser-ui-views-toolbar-toolbar_view.cc.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-installer-util-shell_util.cc.patch  chrome-renderer-url_loader_throttle_provider_impl.h.patch  chrome-test-BUILD.gn.patch  chrome-utility-BUILD.gn.patch  components-content_settings-browser-page_specific_content_settings.cc.patch  components-content_settings-core-browser-content_settings_policy_provider.cc.patch  components-content_settings-core-browser-content_settings_pref_provider.h.patch  components-content_settings-core-common-cookie_settings_base.cc.patch  components-page_info-page_info.cc.patch  (+34 more)
renderer/: brave_content_renderer_client.cc
script/: brave_license_helper.py  policy_source_helper.py
test/: BUILD.gn
(+258 files in other folders)
