# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")
import("//build/buildflag_header.gni")

source_set("webui_resources") {
  sources = [
    "webui_resources.cc",
    "webui_resources.h",
  ]

  deps = [
    "//base",
    "//brave/components/ai_chat/core/common/buildflags",
    "//brave/components/brave_rewards/resources:static_resources",
    "//brave/components/constants",
    "//brave/components/ipfs/buildflags",
    "//brave/components/l10n/common",
    "//brave/components/resources:static_resources",
    "//brave/components/resources:strings_grit",
    "//brave/components/tor/buildflags",
    "//components/resources:components_resources_grit",
    "//components/strings:components_strings",
    "//ui/base:base",
  ]
}
