# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//build/config/ios/rules.gni")
import("//ios/build/config.gni")

source_set("browser") {
  sources = [
    "brave_web_client.h",
    "brave_web_client.mm",
    "brave_web_main_parts.h",
    "brave_web_main_parts.mm",
  ]

  deps = [
    ":chrome_ios",
    "//base",
    "//brave/browser/sync",
    "//brave/chromium_src/ios/chrome/browser/shared/model/prefs",
    "//brave/components/constants",
    "//brave/ios/browser/api",
    "//brave/ios/browser/application_context",
    "//brave/ios/browser/brave_wallet",
    "//brave/ios/browser/browser_state",
    "//brave/ios/browser/ui/webui",
    "//components/flags_ui",
    "//components/metrics",
    "//components/metrics_services_manager",
    "//components/variations",
    "//components/variations/service",
    "//ui/base",
    "//url",
  ]
}

component("chrome_ios") {
  visibility = [ ":browser" ]
  public_deps = [
    "//ios/chrome/browser/application_context/model",
    "//ios/chrome/browser/browser_state/model",
    "//ios/chrome/browser/flags",
    "//ios/chrome/browser/flags:client_side",
    "//ios/chrome/browser/shared/model/browser_state",
    "//ios/chrome/browser/shared/model/paths",
    "//ios/chrome/browser/shared/model/url:constants",
    "//ios/chrome/browser/web:web_internal",
    "//ios/components/webui:url_constants",
    "//ios/public/provider/chrome/browser/url_rewriters:url_rewriters_api",
    "//ios/web/public",
    "//ios/web/public/init",
    "//ios/web/public/navigation",
    "//ios/web/public/thread",
  ]
}
