# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/ios/rules.gni")
import("//ios/build/config.gni")

component("api") {
  deps = [
    "bookmarks",
    "bookmarks/exporter",
    "bookmarks/importer",
    "brave_shields",
    "brave_wallet:wallet_mojom_wrappers",
    "certificate",
    "favicon",
    "history",
    "ipfs",
    "net",
    "ntp_background_images",
    "opentabs",
    "p3a",
    "password",
    "session_restore",
    "sync",
    "url",
    "version_info",
    "web",
    "web_image",
  ]
}
